Configured multi module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-kafka-real-world-project</name>
 	<description>Demo project for Spring Boot and Kafka</description>
+	<modules>
+		<module>kafka-producer-wikimedia</module>
+	</modules>
+	<packaging>pom</packaging>
 	<url/>
 	<licenses>
 		<license/>
