--- a/kafka-consumer-database/pom.xml
+++ b/kafka-consumer-database/pom.xml
@@ -11,7 +11,18 @@
     <packaging>jar</packaging>
     <groupId>org.example</groupId>
     <artifactId>kafka-consumer-database</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
